package com.splendor.assistant.model;

public enum MoveType {
    BUY_CARD, RESERVE_CARD, TAKE_TOKENS
}
